# decky

./: .bandit  .gitignore  .pre-commit-config.yaml  BRANCH_PROTECTION.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  decky.service  deckyctl  install-dbus-support.sh  install-service.sh  install.sh  pyproject.toml  requirements.txt  run.sh  setup.sh
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeowners-check.yml  labeler.yml  lint.yml  pre-commit.yml  release.yml  security.yml  stale.yml  tests.yml
.llm/: .gitignore
configs/: example.yaml  kde.yaml  minimal.yaml
src/: decky.py  decky_launcher.py  validate.py
src/decky/: README.md  __init__.py  cli.py  controller.py  main.py
src/decky/actions/: README.md  __init__.py  application.py  base.py  command.py  page.py  registry.py  url.py
src/decky/cli/: README.md
src/decky/config/: README.md  __init__.py  loader.py
src/decky/device/: README.md  __init__.py  manager.py  renderer.py
src/decky/managers/: README.md  __init__.py  animation.py  connection.py  page.py  widget.py
src/decky/utils/: __init__.py  errors.py
src/decky/widgets/: README.md  __init__.py  base.py  clock.py  system.py  weather.py
tests/: README.md  conftest.py
tests/integration/: test_config_compatibility.py  test_main_loop.py  test_reconnection_scenarios.py
tests/unit/: __init__.py  test_actions.py  test_cli_validation.py  test_controller_connection.py  test_device_manager.py  test_gif_animation.py  test_graceful_shutdown.py  test_kde_platform.py  test_platform.py  test_widget_manager.py  test_widgets.py
